@@ -58,6 +58,7 @@ SVN version
 [FIX] cl_defaultweapon, you can now spawn and select the weapon you want by doing cl_defaultweapon <weapon name>
 [FIX] Ironsights, they were fucked up
 [FIX] mp_falldamage not working
+[FIX] Chat bug after gamemode_reload(developer's thing)
 [CHANGE] /buypistol to /buy because of the custom items
 [CHANGE] rp_max<customteam> to rp_max<customteam>s
 [CHANGE] Made admins.lua a bit more idiot proof
